NetBSD Problem Report #44152

From www@NetBSD.org  Fri Nov 26 07:44:08 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id E9C3B63BAE5
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 26 Nov 2010 07:44:07 +0000 (UTC)
Message-Id: <20101126074407.94A1163B95F@www.NetBSD.org>
Date: Fri, 26 Nov 2010 07:44:07 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: kvm_close not returning -1 on failure.
X-Send-Pr-Version: www-1.0

>Number:         44152
>Category:       lib
>Synopsis:       kvm_close not returning -1 on failure.
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 26 07:45:00 +0000 2010
>Closed-Date:    Fri Nov 26 22:06:12 +0000 2010
>Last-Modified:  Fri Nov 26 22:06:12 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Function kvm_close is not returning -1 on failure.
>How-To-Repeat:

>Fix:
diff -u -r1.96 kvm.c
--- lib/libkvm/kvm.c	23 Oct 2010 14:34:12 -0000	1.96
+++ lib/libkvm/kvm.c	26 Nov 2010 05:04:38 -0000
@@ -759,7 +759,7 @@
 		free(kd->iobuf);
 	free(kd);

-	return (0);
+	return (error);
 }

 int

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44152 CVS commit: src/lib/libkvm
Date: Fri, 26 Nov 2010 22:01:53 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Fri Nov 26 22:01:53 UTC 2010

 Modified Files:
 	src/lib/libkvm: kvm.c

 Log Message:
 Return error on failure instead of hiding it and always returning zero.
 From Henning Petersen in PR 44152.


 To generate a diff of this commit:
 cvs rdiff -u -r1.96 -r1.97 src/lib/libkvm/kvm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 26 Nov 2010 22:06:12 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.