Return error on failure instead of hiding it and always returning zero. From Henning Petersen in PR 44152.